# creating_knowledge_base

./: .gitignore  CLAUDE.md  cbk_scraper.py  cbk_scraper_v2.py  cbk_scraper_v3.py  chunk_corpus.py  chunks_rtl_sample.html  cma_scraper.py  corpus_audit.py  corpus_health.py  corpus_rtl_sample.html  inspect_short_docs.py  kuwait_legal_scraper.py  main.py  ocr_fix_presentation.py  ocr_recovery.py  pyproject.toml  random_sample.py  random_sample_chunks.py  rid_duplicate.py  rtl_check.html  short_docs_review.html
