[project]
name = "creating-knowledge-base"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pdf2image>=1.17.0",
    "pdfplumber>=0.11.9",
    "pillow>=12.2.0",
    "pymupdf>=1.27.2.3",
    "pytesseract>=0.3.13",
    "requests>=2.34.1",
    "transformers>=4.44.0",
    "torch>=2.2.0",
    "sentencepiece>=0.2.0",
]
